fix: 修复在 Shift 键不是连续的情况下也会打开 Find Everywhere 的问题 (#18)